--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,6 @@
 
 body{
-   background-image:url("try.png");
+   background-image:url("images/try.png");
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: larger;
    text-align: center;
@@ -89,3 +89,4 @@ h1{
 .navbar li{
     float: left;
 }
+
