--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     
 body{
 
-    font-family: pacifico, cursive;
+    font-family: quicksand;
     background-image: url(images/box.png);
     color: rgb(251, 251, 78);
     margin: 10px;
@@ -103,4 +103,5 @@ body{
     margin-left: auto;
     margin-right: auto;  
 }
+
 
