--- a/style5.css
+++ b/style5.css
@@ -1,5 +1,5 @@
 body{
-    font-family: pacifico, cursive;
+    font-family: 'Quicksand', san-Serif;
     text-align: center;
     color: rgb(236, 232, 232);
     background-color: rgb(37, 36, 36);
@@ -121,3 +121,4 @@ body{
     background-color: rgb(235, 73, 124);
     font-size: larger;
     }
+
