--- a/style7.css
+++ b/style7.css
@@ -44,6 +44,7 @@ body{
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+    overflow: scroll;
 }
 
 #container3{
@@ -53,6 +54,7 @@ body{
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+    overflow: scroll;
 }
 
 #container4{
@@ -62,6 +64,7 @@ body{
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+    overflow: scroll;
 }
 
 #container5{
@@ -81,6 +84,7 @@ body{
     height: 250px;
     margin-left: auto;
     margin-right: auto;
+    overflow: scroll;
 }
 
 #container7{
@@ -109,13 +113,13 @@ body{
     width: 100px;
     height: auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%
     border: 1px solid #171717;
     border-radius: 10px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     background-color: pink;
 
 }
+
 
 
