--- a/style7.css
+++ b/style7.css
@@ -110,16 +110,18 @@ body{
    background-color: rgba(255, 0, 115, 0.748);
 }
 .audio{
-    width: 100px;
+    width: 300px;
     height: auto;
     display: block;
-    max-width: 100%
-    border: 1px solid #171717;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #ffffff;
     border-radius: 10px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     background-color: pink;
 
 }
+
 
 
 
