--- a/style7.css
+++ b/style7.css
@@ -110,17 +110,20 @@ body{
    background-color: rgba(255, 0, 115, 0.748);
 }
 .audio{
-    width: 300px;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid #ffffff;
-    border-radius: 10px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     background-color: pink;
 
 }
+.audio-center audio {
+  max-width: 100%;
+}
+
 
 
 
